tests/baselines/reference/genericMergedDeclarationUsingTypeParameter.errors.txt
genericMergedDeclarationUsingTypeParameter.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
genericMergedDeclarationUsingTypeParameter.ts(3,19): error TS2304: Cannot find name 'T'.
genericMergedDeclarationUsingTypeParameter.ts(4,14): error TS2304: Cannot find name 'T'.


==== genericMergedDeclarationUsingTypeParameter.ts (3 errors) ====
    function foo<T extends U, U>(y: T, z: U) { return y; }
    module foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x: T;
                      ~
!!! error TS2304: Cannot find name 'T'.
        var y = <T>1;
                 ~
!!! error TS2304: Cannot find name 'T'.
    }
    